[tool.poetry]
name = "scrapper"
version = "0.1.0"
description = ""
authors = ["lk"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
asyncio = "^3.4.3"
aiohttp = "^3.8.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
